Fix non-devel builds.
Three changes:
 - Reset or update the SDK before each build.
 - Use packaging from the appropriate branch, instead of devel.
 - Set LSBCC_LSBVERSION when appropriate.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -17,7 +17,7 @@ from buildbot.status import words
 from buildbot.status.web.auth import HTPasswdAuth
 
 from lfbuildbot import LSBBuildCommand, LSBBuildPackage, \
-    LSBBuildFromPackaging
+    LSBBuildFromPackaging, LSBReloadSDK
 
 from bzr_buildbot import BzrPoller
 
@@ -28,9 +28,8 @@ from bzr_buildbot import BzrPoller
 # prevent cut-n-pasting, we use conventions.  All architectures are
 # defined in an architectures list, and builds are named
 # "project-arch".  Schedulers for these are named "sch-project-arch".
-# For the special "sdk" project, we have "build-sdk-arch" and
-# "update-sdk-arch" for the two jobs that build and update the SDK.
-# Their schedulers are prefixed with "sch-", like the others.
+# For the special "sdk" project, the job's name is "build-sdk-arch".
+# Its scheduler is prefixed with "sch-", like the others.
 
 # Toplevel configuration, used by the builder/scheduler setup.
 
@@ -120,7 +119,7 @@ c = BuildmasterConfig = {}
 
 def prioritize(buildmaster, builders):
     sdk_builders = []
-    for jobname in ("build-sdk", "update-sdk", "libbat"):
+    for jobname in ("build-sdk", "libbat"):
         for builder in builders[:]:
             if builder.name[:len(jobname)] == jobname:
                 builders.remove(builder)
@@ -217,8 +216,6 @@ sch_weekly_names = []
 # as well as the appbat.
 
 for arch in lsb_archs:
-    sch_update = scheduler.Triggerable(name="update-sdk-" + arch,
-                                       builderNames=["update-sdk-" + arch])
     sch_libbat = scheduler.Triggerable(name="sch-libbat-" + arch,
                                        builderNames=["libbat-" + arch])
     sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
@@ -226,7 +223,7 @@ for arch in lsb_archs:
                                      builderNames=["appbat-" + arch],
                                      treeStableTimer=slow_stable_timer_seconds)
 
-    c['schedulers'].extend([sch_update, sch_libbat, sch_appbat])
+    c['schedulers'].extend([sch_libbat, sch_appbat])
 
     sch_weekly_names.append("appbat-" + arch)
 
@@ -389,25 +386,12 @@ for arch in lsb_archs:
                    masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s-%s.tar.gz" % arch),
                    workdir="build_env"))
     build_sdk.addStep(
-        trigger.Trigger(name="trigger-update-sdk-" + arch,
-                        schedulerNames=['update-sdk-' + arch],
-                        waitForFinish=False, updateSourceStamp=False))
-    build_sdk.addStep(
         trigger.Trigger(name="trigger-libbat-" + arch,
                         schedulerNames=['sch-libbat-' + arch],
                         waitForFinish=False, updateSourceStamp=False))
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
-          'category': 'lsb' })
-
-    update_sdk = factory.BuildFactory()
-    update_sdk.addStep(
-        ShellCommand(command=['update-sdk', 
-                              '../../build-sdk-%s/sdk-results' % arch]))
-    lsb_builds.append(
-        { 'name': 'update-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
-          'builddir': 'update-sdk-' + arch, 'factory': update_sdk, 
           'category': 'lsb' })
 
     reset_sdk = factory.BuildFactory()
@@ -435,6 +419,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
+        b.addStep(LSBReloadSDK(name="reload-sdk"))
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=4*60*60))
@@ -480,6 +465,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
+        b.addStep(LSBReloadSDK(name="reload-sdk"))
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
                           defaultBranch="lsb/devel/%s" % repo,
@@ -488,7 +474,8 @@ for arch in lsb_archs:
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
                 command=["bzr", "checkout", 
-                         os.path.join(bzr_toplevel, "lsb/devel/packaging"),
+                         WithProperties("%s/lsb/%%(branch_name)s/packaging"
+                                        % bzr_toplevel),
                          "../packaging"],
                 name="checkout-packaging"))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
@@ -522,6 +509,8 @@ for arch in lsb_archs:
     # so have to be custom.
 
     libbat = factory.BuildFactory()
+
+    libbat.addStep(LSBReloadSDK(name="reload-sdk"))
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
@@ -578,6 +567,8 @@ for arch in lsb_archs:
           'category': 'lsb' })
 
     appbat = factory.BuildFactory()
+
+    appbat.addStep(LSBReloadSDK(name="reload-sdk"))
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
