Update true dependencies on libbat.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -72,7 +72,7 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                                      "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "lsbappchk-python": ["python-test"],
-                     "libbat": ["appbat"],
+                     "libbat": ["lsb-xvfb", "xts5-test", "appbat"],
                      "lsbappchk": ["appbat"],
                      "lsbpkgchk": ["appbat"]}
 
