Add dependency triggers.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -85,7 +85,18 @@ slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
 
 # Helper functions
 
-def add_dependency_triggers(project, arch, builder):
+def add_pre_dependency_triggers(project, arch, builder):
+    for dep in lsb_dependencies:
+        if project in lsb_dependencies[dep]:
+            builder.addStep(
+                trigger.Trigger(
+                    schedulerNames=["trigger-%s-%s" % (dep, arch)],
+                    waitForFinish=True, updateSourceStamp=False,
+                    set_properties={ 'branch': 
+                                     WithProperties("lsb/%(branch_name)s/" 
+                                                    + dep) }))
+
+def add_post_dependency_triggers(project, arch, builder):
     pkg_install_command = \
         "ls ../results/*.rpm | egrep -v src.rpm | " + \
         "xargs sudo rpm -Uvh --force"
@@ -95,17 +106,6 @@ def add_dependency_triggers(project, arch, builder):
         builder.addStep(ShellCommand(command=pkg_install_command, 
                                      name="update-pkgs",
                                      flunkOnFailure=False))
-
-        # Actual dependencies are too difficult to do now; the
-        # SourceStamp of the previous build gets propagated
-        # to the dependent builds.  So let's disable for now.
-
-        #for subprj in lsb_dependencies[project]:
-        #    subprj_name = "%s-%s" % (subprj, arch)
-        #    builder.addStep(
-        #        trigger.Trigger(name="trigger-" + subprj_name,
-        #                        schedulerNames=['trigger-' + subprj_name],
-        #                        waitForFinish=False, updateSourceStamp=False))
 
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -133,13 +133,13 @@ c['prioritizeBuilders'] = prioritize
 # the 'slaves' list defines the set of allowable buildslaves. Each element is
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
-c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=1),
-               BuildSlave("lfbuild-x86", "ail1Aebu", max_builds=1),
-               BuildSlave("lfbuild-ia64", "quae7Moh", max_builds=1),
-               BuildSlave("lfbuild-ppc32", "AiSh4aej", max_builds=1),
-               BuildSlave("lfbuild-ppc64", "ai2agaeT", max_builds=1),
-               BuildSlave("lfbuild-s390", "aeGh0ooy", max_builds=1),
-               BuildSlave("lfbuild-s390x", "ahtoop3O", max_builds=1)]
+c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=2),
+               BuildSlave("lfbuild-x86", "ail1Aebu", max_builds=2),
+               BuildSlave("lfbuild-ia64", "quae7Moh", max_builds=2),
+               BuildSlave("lfbuild-ppc32", "AiSh4aej", max_builds=2),
+               BuildSlave("lfbuild-ppc64", "ai2agaeT", max_builds=2),
+               BuildSlave("lfbuild-s390", "aeGh0ooy", max_builds=2),
+               BuildSlave("lfbuild-s390x", "ahtoop3O", max_builds=2)]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -272,6 +272,19 @@ for (prj, repo) in lsb_packaging_projects:
 
         sch_weekly_names.append(prj_name)
 
+# Triggerable schedulers for dependencies.
+
+for prj in lsb_dependencies:
+    if prj in lsb_arch_indep_projects:
+        archlist = [lsb_buildslave_arch_indep_arch]
+    else:
+        archlist = lsb_archs
+    for arch in archlist:
+        prj_name = "%s-%s" % (prj, arch)
+        sch = scheduler.Triggerable(name="trigger-" + prj_name,
+                                    builderNames=[prj_name])
+        c["schedulers"].append(sch)
+
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
 # project is built at least once a week.
 
@@ -385,10 +398,6 @@ for arch in lsb_archs:
         FileUpload(slavesrc="../sdk-results.tar.gz", 
                    masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s-%s.tar.gz" % arch),
                    workdir="build_env"))
-    build_sdk.addStep(
-        trigger.Trigger(name="trigger-libbat-" + arch,
-                        schedulerNames=['sch-libbat-' + arch],
-                        waitForFinish=False, updateSourceStamp=False))
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
@@ -420,6 +429,7 @@ for arch in lsb_archs:
 
         b = factory.BuildFactory()
         b.addStep(LSBReloadSDK(name="reload-sdk"))
+        add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=4*60*60))
@@ -439,7 +449,7 @@ for arch in lsb_archs:
             FileUpload(slavesrc="../results.tar.gz", 
                        masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results"))
-        add_dependency_triggers(prj, build_arch, b)
+        add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
 
@@ -466,6 +476,7 @@ for arch in lsb_archs:
 
         b = factory.BuildFactory()
         b.addStep(LSBReloadSDK(name="reload-sdk"))
+        add_pre_dependency_triggers(prj, build_arch, b)
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
                           defaultBranch="lsb/devel/%s" % repo,
@@ -496,7 +507,7 @@ for arch in lsb_archs:
             FileUpload(slavesrc="../results.tar.gz", 
                        masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results"))
-        add_dependency_triggers(prj, build_arch, b)
+        add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
 
@@ -511,6 +522,8 @@ for arch in lsb_archs:
     libbat = factory.BuildFactory()
 
     libbat.addStep(LSBReloadSDK(name="reload-sdk"))
+
+    add_pre_dependency_triggers("libbat", arch, libbat)
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
@@ -553,22 +566,25 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     libbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("libbat-%%(branch_name:-results)s-%s.tar.gz" % build_arch),
+                   masterdest=WithProperties("libbat-%%(branch_name:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results"))
     libbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
                      workdir="appbat", name="save-pkgcache",
                      flunkOnFailure=False, haltOnFailure=False))
-    add_dependency_triggers("libbat", build_arch, libbat)
+
+    add_post_dependency_triggers("libbat", arch, libbat)
 
     lsb_builds.append(
-        { 'name': 'libbat-' + build_arch, 'slavenames': buildslaves,
-          'builddir': 'libbat-' + build_arch, 'factory': libbat,
+        { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
+          'builddir': 'libbat-' + arch, 'factory': libbat,
           'category': 'lsb' })
 
     appbat = factory.BuildFactory()
 
     appbat.addStep(LSBReloadSDK(name="reload-sdk"))
+
+    add_pre_dependency_triggers("appbat", arch, appbat)
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
                        workdir="appbat", mode="copy", timeout=4*60*60))
@@ -617,14 +633,14 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     appbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("appbat-%%(branch_name:-results)s-%s.tar.gz" % build_arch),
+                   masterdest=WithProperties("appbat-%%(branch_name:-results)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
-    add_dependency_triggers("appbat", build_arch, appbat)
+    add_post_dependency_triggers("appbat", arch, appbat)
 
     lsb_builds.append(
-        { 'name': 'appbat-' + build_arch, 'slavenames': buildslaves,
-          'builddir': 'appbat-' + build_arch, 'factory': appbat,
+        { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
+          'builddir': 'appbat-' + arch, 'factory': appbat,
           'category': 'lsb' })
 
 # Final build configuration
