--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -3,7 +3,7 @@
 
 import os
 
-from buildbot import scheduler
+from buildbot import scheduler, locks
 from buildbot.buildslave import BuildSlave
 from buildbot.process import factory
 from buildbot.steps import trigger
@@ -64,6 +64,10 @@ lsb_packaging_projects = [("lsbappchk", "misc-test"),
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
 
+# Dependencies.  The key is the package depended on, and the values are
+# the list of packages which depend on it.  For example, if you need "foo"
+# to build "bar", you'd do "foo": ["bar"].  Dependencies cannot be recursive,
+# as this could cause builder deadlocks.
 lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests", 
                                      "azov-qt4-tests", "azov-xml2-tests", 
                                      "desktop-test", "printing-test", 
@@ -75,6 +79,11 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                      "libbat": ["lsb-xvfb", "xts5-test", "appbat"],
                      "lsbappchk": ["appbat"],
                      "lsbpkgchk": ["appbat"]}
+
+# Job locking.  We don't limit the number of concurrent jobs per
+# slave in the slave config; instead, we only allow one build at a time
+# for builds not triggered via dependencies.
+job_lock = locks.SlaveLock("nondep_builds", maxCount = 1)
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
@@ -133,13 +142,13 @@ c['prioritizeBuilders'] = prioritize
 # the 'slaves' list defines the set of allowable buildslaves. Each element is
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
-c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=2),
-               BuildSlave("lfbuild-x86", "ail1Aebu", max_builds=2),
-               BuildSlave("lfbuild-ia64", "quae7Moh", max_builds=2),
-               BuildSlave("lfbuild-ppc32", "AiSh4aej", max_builds=2),
-               BuildSlave("lfbuild-ppc64", "ai2agaeT", max_builds=2),
-               BuildSlave("lfbuild-s390", "aeGh0ooy", max_builds=2),
-               BuildSlave("lfbuild-s390x", "ahtoop3O", max_builds=2)]
+c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd"),
+               BuildSlave("lfbuild-x86", "ail1Aebu"),
+               BuildSlave("lfbuild-ia64", "quae7Moh"),
+               BuildSlave("lfbuild-ppc32", "AiSh4aej"),
+               BuildSlave("lfbuild-ppc64", "ai2agaeT"),
+               BuildSlave("lfbuild-s390", "aeGh0ooy"),
+               BuildSlave("lfbuild-s390x", "ahtoop3O")]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -401,14 +410,14 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
-          'category': 'lsb' })
+          'category': 'lsb', 'locks': [job_lock] })
 
     reset_sdk = factory.BuildFactory()
     reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
     lsb_builds.append(
         { 'name': 'reset-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'reset-sdk-' + arch, 'factory': reset_sdk, 
-          'category': 'lsb' })
+          'category': 'lsb', 'locks': [job_lock] })
 
     # "Package subdir" projects.  These have a "package" directory in
     # them; to build their packages, you go to the package directory
@@ -453,10 +462,15 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
 
+        if prj in lsb_dependencies:
+            locks = []
+        else:
+            locks = [job_lock]
+
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
               'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
-              'category': 'lsb' })
+              'category': 'lsb', 'locks': locks })
 
     # "Packaging" projects.  These are actually built from a separate
     # bzr tree, called "packaging", which contains the instructions for
@@ -511,10 +525,15 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
 
+        if prj in lsb_dependencies:
+            locks = []
+        else:
+            locks = [job_lock]
+
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
               'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
-              'category': 'lsb' })
+              'category': 'lsb', 'locks': locks })
 
     # Weird builds.  These don't conform to one of the patterns, and
     # so have to be custom.
@@ -575,10 +594,15 @@ for arch in lsb_archs:
 
     add_post_dependency_triggers("libbat", arch, libbat)
 
+    if "libbat" in lsb_dependencies:
+        locks = []
+    else:
+        locks = [job_lock]
+
     lsb_builds.append(
         { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
           'builddir': 'libbat-' + arch, 'factory': libbat,
-          'category': 'lsb' })
+          'category': 'lsb', 'locks': locks })
 
     appbat = factory.BuildFactory()
 
@@ -638,10 +662,15 @@ for arch in lsb_archs:
                    flunkOnFailure=False))
     add_post_dependency_triggers("appbat", arch, appbat)
 
+    if "appbat" in lsb_dependencies:
+        locks = []
+    else:
+        locks = [job_lock]
+
     lsb_builds.append(
         { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
           'builddir': 'appbat-' + arch, 'factory': appbat,
-          'category': 'lsb' })
+          'category': 'lsb', 'locks': locks })
 
 # Final build configuration
 
