Add locks for dependent builds and all packaging operations.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -83,7 +83,11 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
 # Job locking.  We don't limit the number of concurrent jobs per
 # slave in the slave config; instead, we only allow one build at a time
 # for builds not triggered via dependencies.
-job_lock = locks.SlaveLock("nondep_builds", maxCount = 1)
+nondep_job_lock = locks.SlaveLock("nondep_builds", maxCount = 1)
+dep_job_lock = locks.SlaveLock("dep_builds", maxCount = 1)
+
+# Lock for all package installs.
+pkg_lock = locks.SlaveLock("package_manager", maxCount = 1)
 
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
@@ -113,7 +117,7 @@ def add_post_dependency_triggers(project, arch, builder):
         prj_name = "%s-%s" % (project, arch)
 
         builder.addStep(ShellCommand(command=pkg_install_command, 
-                                     name="update-pkgs",
+                                     name="update-pkgs", locks=[pkg_lock],
                                      flunkOnFailure=False))
 
 
@@ -367,7 +371,7 @@ for arch in lsb_archs:
                      "../packaging"],
             name="checkout-packaging", workdir="build_env"))
     build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
-                                   workdir="build_env"))
+                                   workdir="build_env", locks=[pkg_lock]))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
                                    name="rm-old-results", workdir="build_env"))
@@ -410,14 +414,15 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
-          'category': 'lsb', 'locks': [job_lock] })
+          'category': 'lsb', 'locks': [nondep_job_lock] })
 
     reset_sdk = factory.BuildFactory()
-    reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
+    reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
+                                   locks=[pkg_lock]))
     lsb_builds.append(
         { 'name': 'reset-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'reset-sdk-' + arch, 'factory': reset_sdk, 
-          'category': 'lsb', 'locks': [job_lock] })
+          'category': 'lsb', 'locks': [nondep_job_lock] })
 
     # "Package subdir" projects.  These have a "package" directory in
     # them; to build their packages, you go to the package directory
@@ -437,7 +442,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
-        b.addStep(LSBReloadSDK(name="reload-sdk"))
+        b.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
@@ -463,9 +468,9 @@ for arch in lsb_archs:
                                name="clear-results-dir"))
 
         if prj in lsb_dependencies:
-            locks = []
+            locks = [dep_job_lock]
         else:
-            locks = [job_lock]
+            locks = [nondep_job_lock]
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -489,7 +494,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
-        b.addStep(LSBReloadSDK(name="reload-sdk"))
+        b.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
@@ -526,9 +531,9 @@ for arch in lsb_archs:
                                name="clear-results-dir"))
 
         if prj in lsb_dependencies:
-            locks = []
+            locks = [dep_job_lock]
         else:
-            locks = [job_lock]
+            locks = [nondep_job_lock]
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -540,7 +545,7 @@ for arch in lsb_archs:
 
     libbat = factory.BuildFactory()
 
-    libbat.addStep(LSBReloadSDK(name="reload-sdk"))
+    libbat.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
 
     add_pre_dependency_triggers("libbat", arch, libbat)
 
@@ -595,9 +600,9 @@ for arch in lsb_archs:
     add_post_dependency_triggers("libbat", arch, libbat)
 
     if "libbat" in lsb_dependencies:
-        locks = []
+        locks = [dep_job_lock]
     else:
-        locks = [job_lock]
+        locks = [nondep_job_lock]
 
     lsb_builds.append(
         { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
@@ -606,7 +611,7 @@ for arch in lsb_archs:
 
     appbat = factory.BuildFactory()
 
-    appbat.addStep(LSBReloadSDK(name="reload-sdk"))
+    appbat.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
 
     add_pre_dependency_triggers("appbat", arch, appbat)
 
@@ -663,9 +668,9 @@ for arch in lsb_archs:
     add_post_dependency_triggers("appbat", arch, appbat)
 
     if "appbat" in lsb_dependencies:
-        locks = []
+        locks = [dep_job_lock]
     else:
-        locks = [job_lock]
+        locks = [nondep_job_lock]
 
     lsb_builds.append(
         { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
