Don't schedule separate weekly builds for dependencies.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -238,7 +238,8 @@ for arch in lsb_archs:
 
     c['schedulers'].extend([sch_libbat, sch_appbat])
 
-    sch_weekly_names.append("appbat-" + arch)
+    if "appbat" not in lsb_dependencies:
+        sch_weekly_names.append("appbat-" + arch)
 
 # Package subdir schedulers.
 
@@ -262,7 +263,8 @@ for prj in lsb_pkg_subdir_projects:
                 c['schedulers'].append(sch)
                 break
 
-        sch_weekly_names.append(prj_name)
+        if prj not in lsb_dependencies:
+            sch_weekly_names.append(prj_name)
 
 # Packaging project schedulers.
 
@@ -283,7 +285,8 @@ for (prj, repo) in lsb_packaging_projects:
                                          treeStableTimer=stable_timer_seconds)
         c['schedulers'].append(sch)
 
-        sch_weekly_names.append(prj_name)
+        if prj not in lsb_dependencies:
+            sch_weekly_names.append(prj_name)
 
 # Triggerable schedulers for dependencies.
 
