Switch to lock access objects.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -417,7 +417,7 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
-          'category': 'lsb', 'locks': [nondep_job_lock] })
+          'category': 'lsb', 'locks': [nondep_job_lock.access('counting')] })
 
     reset_sdk = factory.BuildFactory()
     reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
@@ -425,7 +425,7 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'reset-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'reset-sdk-' + arch, 'factory': reset_sdk, 
-          'category': 'lsb', 'locks': [nondep_job_lock] })
+          'category': 'lsb', 'locks': [nondep_job_lock.access('counting')] })
 
     # "Package subdir" projects.  These have a "package" directory in
     # them; to build their packages, you go to the package directory
@@ -471,9 +471,9 @@ for arch in lsb_archs:
                                name="clear-results-dir"))
 
         if prj in lsb_dependencies:
-            locks = [dep_job_lock]
+            locks = [dep_job_lock.access('counting')]
         else:
-            locks = [nondep_job_lock]
+            locks = [nondep_job_lock.access('counting')]
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -534,9 +534,9 @@ for arch in lsb_archs:
                                name="clear-results-dir"))
 
         if prj in lsb_dependencies:
-            locks = [dep_job_lock]
+            locks = [dep_job_lock.access('counting')]
         else:
-            locks = [nondep_job_lock]
+            locks = [nondep_job_lock.access('counting')]
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -603,9 +603,9 @@ for arch in lsb_archs:
     add_post_dependency_triggers("libbat", arch, libbat)
 
     if "libbat" in lsb_dependencies:
-        locks = [dep_job_lock]
+        locks = [dep_job_lock.access('counting')]
     else:
-        locks = [nondep_job_lock]
+        locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
         { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
@@ -671,9 +671,9 @@ for arch in lsb_archs:
     add_post_dependency_triggers("appbat", arch, appbat)
 
     if "appbat" in lsb_dependencies:
-        locks = [dep_job_lock]
+        locks = [dep_job_lock.access('counting')]
     else:
-        locks = [nondep_job_lock]
+        locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
         { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
