Disable the Moblin IRC bot.

--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -350,12 +350,12 @@ c['status'] = []
 from buildbot.status import html
 c['status'].append(html.WebStatus(http_port=8010, allowForce=True))
 
-from buildbot.status import words
-c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="moblin_bb",
-                             channels=["#moblin"], allowForce=True,
-                             notify_events={'exception': 1,
-                                            'successToFailure': 1,
-                                            'failureToSuccess': 1}))
+#from buildbot.status import words
+#c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="moblin_bb",
+#                             channels=["#moblin"], allowForce=True,
+#                             notify_events={'exception': 1,
+#                                            'successToFailure': 1,
+#                                            'failureToSuccess': 1}))
 
 # from buildbot.status import mail
 # c['status'].append(mail.MailNotifier(fromaddr="buildbot@localhost",
