Set a repository lock for misc-test builds.
The misc-test repository is the source for multiple builds, so when it
changes, multiple build tasks get fired.  Make sure that only one at a 
time get built.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -89,6 +89,12 @@ dep_job_lock = locks.SlaveLock("dep_builds", maxCount = 1)
 # Lock for all package installs.
 pkg_lock = locks.SlaveLock("package_manager", maxCount = 1)
 
+# Per-repo locks.  This handles when multiple projects are built
+# out of the same repository.  If any of them are dependencies,
+# we risk concurrent builds clobbering each other.  Right now,
+# only misc-test works this way.
+repo_locks = { "misc-test": locks.SlaveLock("misc-test", maxCount = 1) }
+
 # This funny-sounding setting controls which architecture we hold
 # responsible for building architecture-independent components.
 lsb_buildslave_arch_indep_arch = "x86_64"
@@ -537,6 +543,8 @@ for arch in lsb_archs:
             locks = [dep_job_lock.access('counting')]
         else:
             locks = [nondep_job_lock.access('counting')]
+        if repo in repo_locks:
+            locks.append(repo_locks[repo].access('counting'))
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
