Subclass Triggerable to not propagate SourceStamps across triggers.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -17,7 +17,7 @@ from buildbot.status import words
 from buildbot.status.web.auth import HTPasswdAuth
 
 from lfbuildbot import LSBBuildCommand, LSBBuildPackage, \
-    LSBBuildFromPackaging, LSBReloadSDK
+    LSBBuildFromPackaging, LSBReloadSDK, IndepTriggerable
 
 from bzr_buildbot import BzrPoller
 
@@ -235,8 +235,8 @@ sch_weekly_names = []
 # as well as the appbat.
 
 for arch in lsb_archs:
-    sch_libbat = scheduler.Triggerable(name="sch-libbat-" + arch,
-                                       builderNames=["libbat-" + arch])
+    sch_libbat = IndepTriggerable(name="sch-libbat-" + arch,
+                                  builderNames=["libbat-" + arch])
     sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
                                      branch="lsb/devel/appbat",
                                      builderNames=["appbat-" + arch],
@@ -264,8 +264,8 @@ for prj in lsb_pkg_subdir_projects:
 
         for deplist in lsb_dependencies.itervalues():
             if prj in deplist:
-                sch = scheduler.Triggerable(name="trigger-" + prj_name,
-                                            builderNames=[prj_name])
+                sch = IndepTriggerable(name="trigger-" + prj_name,
+                                       builderNames=[prj_name])
                 c['schedulers'].append(sch)
                 break
 
@@ -303,8 +303,8 @@ for prj in lsb_dependencies:
         archlist = lsb_archs
     for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
-        sch = scheduler.Triggerable(name="trigger-" + prj_name,
-                                    builderNames=[prj_name])
+        sch = IndepTriggerable(name="trigger-" + prj_name,
+                               builderNames=[prj_name])
         c["schedulers"].append(sch)
 
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
