--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -241,9 +241,14 @@ for arch in lsb_archs:
                                      branch="lsb/devel/appbat",
                                      builderNames=["appbat-" + arch],
                                      treeStableTimer=slow_stable_timer_seconds)
+    sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
+                                     branch="lsb/devel/misc-test",
+                                     builderNames=["devchk-" + arch],
+                                     treeStableTimer=stable_timer_seconds)
 
-    c['schedulers'].extend([sch_libbat, sch_appbat])
+    c['schedulers'].extend([sch_libbat, sch_appbat, sch_devchk])
 
+    sch_weekly_names.append("devchk-" + arch)
     if "appbat" not in lsb_dependencies:
         sch_weekly_names.append("appbat-" + arch)
 
@@ -686,6 +691,44 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
           'builddir': 'appbat-' + arch, 'factory': appbat,
+          'category': 'lsb', 'locks': locks })
+
+    devchk = factory.BuildFactory()
+
+    devchk.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+
+    add_pre_dependency_triggers("devchk", arch, devchk)
+
+    devchk.addStep(Bzr(baseURL=bzr_toplevel, 
+                       defaultBranch="lsb/devel/misc-test",
+                       workdir="misc-test", mode="copy", timeout=4*60*60))
+    devchk.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
+                                workdir="misc-test", name="clear-old-results"))
+    devchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
+                                workdir="misc-test", 
+                                name="create-results-dir"))
+    devchk.addStep(ShellCommand(command="cd devchk/ts/devchk && ./dodevchk",
+                                workdir="misc-test", name="build"))
+    devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output ../results",
+                                workdir="misc-test", name="collect-results"))
+    devchk.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                         "../results"],
+                                workdir="misc-test", name="pack-results"))
+    devchk.addStep(
+        FileUpload(slavesrc="../results.tar.gz", 
+                   masterdest=WithProperties("devchk-%%(branch_name:-results)s-%s.tar.gz" % arch),
+                   workdir="misc-test", name="upload-results", 
+                   flunkOnFailure=False))
+    add_post_dependency_triggers("devchk", arch, devchk)
+
+    if "devchk" in lsb_dependencies:
+        locks = [dep_job_lock.access('counting')]
+    else:
+        locks = [nondep_job_lock.access('counting')]
+
+    lsb_builds.append(
+        { 'name': 'devchk-' + arch, 'slavenames': buildslaves,
+          'builddir': 'devchk-' + arch, 'factory': devchk,
           'category': 'lsb', 'locks': locks })
 
 # Final build configuration
