Propagate build reason to triggered builds, so tags in reason propagate.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -113,7 +113,9 @@ def add_pre_dependency_triggers(project, arch, builder):
                     waitForFinish=True, updateSourceStamp=False,
                     set_properties={ 'branch': 
                                      WithProperties("lsb/%(branch_name)s/" 
-                                                    + dep) }))
+                                                    + dep),
+                                     'reason':
+                                     WithProperties("%(reason)s") }))
 
 def add_post_dependency_triggers(project, arch, builder):
     pkg_install_command = \
