Get reason propagation working properly.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -111,11 +111,10 @@ def add_pre_dependency_triggers(project, arch, builder):
                 trigger.Trigger(
                     schedulerNames=["trigger-%s-%s" % (dep, arch)],
                     waitForFinish=True, updateSourceStamp=False,
+                    copy_properties=['reason'],
                     set_properties={ 'branch': 
                                      WithProperties("lsb/%(branch_name)s/" 
-                                                    + dep),
-                                     'reason':
-                                     WithProperties("%(reason)s") }))
+                                                    + dep) }))
 
 def add_post_dependency_triggers(project, arch, builder):
     pkg_install_command = \
