--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -17,7 +17,7 @@ from buildbot.status import words
 from buildbot.status.web.auth import HTPasswdAuth
 
 from lfbuildbot import LSBBuildCommand, LSBBuildPackage, \
-    LSBBuildFromPackaging, LSBReloadSDK, IndepTriggerable
+    LSBBuildFromPackaging, LSBReloadSDK, IndepTriggerable, MultiScheduler
 
 from bzr_buildbot import BzrPoller
 
@@ -40,7 +40,9 @@ slow_stable_timer_hours = 6
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
-lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
+#lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
+from lfbuildbot import lsb_archs
+
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
                            "azov-xml2-tests", "desktop-test", 
@@ -223,7 +225,28 @@ sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
 sch_build = scheduler.Nightly(name="build-sdk", branch=None,
                               builderNames=sch_sdk_names, hour=19, minute=0)
 
-c['schedulers'] = [sch_build]
+# Accept multiple jobs via a job directory.  Since we have to report
+# which builders we might start, create a list of all projects to pass
+# in.
+
+multi_builder_list = sch_sdk_names[:]
+
+arch_prj_list = lsb_pkg_subdir_projects + ["appchk", "libchk"] + \
+    [x[0] for x in lsb_packaging_projects]
+
+for prj in arch_prj_list:
+    if prj in lsb_arch_indep_projects:
+        multi_builder_list.append("%s-%s" % (prj, 
+                                             lsb_buildslave_arch_indep_arch))
+    else:
+        for arch in lsb_archs:
+            multi_builder_list.append("%s-%s" % (prj, arch))
+
+sch_jobdir = MultiScheduler(name="sch_jobdir",
+                            builderNames=multi_builder_list, 
+                            jobdir="/var/buildbot")
+
+c['schedulers'] = [sch_build, sch_jobdir]
 
 # Collect project names for the weekly scheduler.
 
