Fix bug in declaration of new scheduler.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -231,7 +231,7 @@ sch_build = scheduler.Nightly(name="build-sdk", branch=None,
 
 multi_builder_list = sch_sdk_names[:]
 
-arch_prj_list = lsb_pkg_subdir_projects + ["appchk", "libchk"] + \
+arch_prj_list = lsb_pkg_subdir_projects + ["appbat", "libbat"] + \
     [x[0] for x in lsb_packaging_projects]
 
 for prj in arch_prj_list:
