Fix problems with MultiScheduler builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -113,7 +113,7 @@ def add_pre_dependency_triggers(project, arch, builder):
                 trigger.Trigger(
                     schedulerNames=["trigger-%s-%s" % (dep, arch)],
                     waitForFinish=True, updateSourceStamp=False,
-                    copy_properties=['reason'],
+                    copy_properties=['build_type'],
                     set_properties={ 'branch': 
                                      WithProperties("lsb/%(branch_name)s/" 
                                                     + dep) }))
