Make archs, arch-independent builder, etc. into configuration and out of MultiScheduler.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -40,8 +40,7 @@ slow_stable_timer_hours = 6
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
-#lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
-from lfbuildbot import lsb_archs
+lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
@@ -244,7 +243,11 @@ for prj in arch_prj_list:
 
 sch_jobdir = MultiScheduler(name="sch_jobdir",
                             builderNames=multi_builder_list, 
-                            jobdir="/var/buildbot")
+                            jobdir="/var/buildbot",
+                            repos=dict(lsb_packaging_projects),
+                            archs=lsb_archs, 
+                            indep_prj=lsb_arch_indep_projects, 
+                            indep_arch=lsb_buildslave_arch_indep_arch)
 
 c['schedulers'] = [sch_build, sch_jobdir]
 
