Enable result tags for tarballs, and use this for beta builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -450,7 +450,7 @@ for arch in lsb_archs:
                                    name="pack-sdk", workdir="build_env"))
     build_sdk.addStep(
         FileUpload(slavesrc="../sdk-results.tar.gz", 
-                   masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="build_env"))
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
@@ -502,7 +502,7 @@ for arch in lsb_archs:
                                name="pack-results"))
         b.addStep(
             FileUpload(slavesrc="../results.tar.gz", 
-                       masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
+                       masterdest=WithProperties("%s-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results"))
         add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
@@ -565,7 +565,7 @@ for arch in lsb_archs:
                                name="pack-results"))
         b.addStep(
             FileUpload(slavesrc="../results.tar.gz", 
-                       masterdest=WithProperties("%s-%%(branch_name:-results)s-%s.tar.gz" % (prj, build_arch)),
+                       masterdest=WithProperties("%s-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % (prj, build_arch)),
                        name="upload-results"))
         add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
@@ -633,7 +633,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     libbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("libbat-%%(branch_name:-results)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("libbat-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results"))
     libbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
@@ -705,7 +705,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="pack-results"))
     appbat.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("appbat-%%(branch_name:-results)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("appbat-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
     add_post_dependency_triggers("appbat", arch, appbat)
@@ -743,7 +743,7 @@ for arch in lsb_archs:
                                 workdir="misc-test", name="pack-results"))
     devchk.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("devchk-%%(branch_name:-results)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("devchk-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="misc-test", name="upload-results", 
                    flunkOnFailure=False))
     add_post_dependency_triggers("devchk", arch, devchk)
