Tweaks: fail on trigger failure, and register build-sdk's repo properly.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -112,6 +112,7 @@ def add_pre_dependency_triggers(project, arch, builder):
                 trigger.Trigger(
                     schedulerNames=["trigger-%s-%s" % (dep, arch)],
                     waitForFinish=True, updateSourceStamp=False,
+                    haltOnFailure=True,
                     copy_properties=['build_type'],
                     set_properties={ 'branch': 
                                      WithProperties("lsb/%(branch_name)s/" 
@@ -241,11 +242,13 @@ for prj in arch_prj_list:
         for arch in lsb_archs:
             multi_builder_list.append("%s-%s" % (prj, arch))
 
+jobdir_repos = dict(lsb_packaging_projects)
+jobdir_repos["build-sdk"] = "build_env"
+
 sch_jobdir = MultiScheduler(name="sch_jobdir",
                             builderNames=multi_builder_list, 
                             jobdir="/var/buildbot",
-                            repos=dict(lsb_packaging_projects),
-                            archs=lsb_archs, 
+                            repos=jobdir_repos, archs=lsb_archs, 
                             indep_prj=lsb_arch_indep_projects, 
                             indep_arch=lsb_buildslave_arch_indep_arch)
 
