Capture SQL and output files for devchk build.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -739,7 +739,7 @@ for arch in lsb_archs:
                                 name="create-results-dir"))
     devchk.addStep(ShellCommand(command="(cd devchk/ts/devchk && ./dodevchk) > ../results/console.log 2>&1",
                                 workdir="misc-test", name="build"))
-    devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output ../results",
+    devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output devchk/ts/devchk/*.sql ../results",
                                 workdir="misc-test", name="collect-results"))
     devchk.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                          "../results"],
