--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -737,7 +737,7 @@ for arch in lsb_archs:
     devchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="misc-test", 
                                 name="create-results-dir"))
-    devchk.addStep(ShellCommand(command="(cd devchk/ts/devchk && ./dodevchk) > ../results/console.log 2>&1",
+    devchk.addStep(ShellCommand(command="cd devchk/ts/devchk && ./dodevchk",
                                 workdir="misc-test", name="build"))
     devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output devchk/ts/devchk/*.sql ../results",
                                 workdir="misc-test", name="collect-results"))
