Ignore devchk build and copy results, and instead just check the result files.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -738,9 +738,14 @@ for arch in lsb_archs:
                                 workdir="misc-test", 
                                 name="create-results-dir"))
     devchk.addStep(ShellCommand(command="cd devchk/ts/devchk && ./dodevchk",
-                                workdir="misc-test", name="build"))
+                                workdir="misc-test", name="build",
+                                flunkOnFailure=False))
     devchk.addStep(ShellCommand(command="cp devchk/ts/devchk/*.output devchk/ts/devchk/*.sql ../results",
-                                workdir="misc-test", name="collect-results"))
+                                workdir="misc-test", name="collect-results",
+                                flunkOnFailure=False))
+    devchk.addStep(ShellCommand(command="test $(ls ../results | wc -l) -gt 0",
+                                workdir="misc-test", name="check-results",
+                                haltOnFailure=True))
     devchk.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
                                          "../results"],
                                 workdir="misc-test", name="pack-results"))
